[Backend] Eliminados usos de "new Long(...)" (deprecated).