@@ -25,7 +25,7 @@ import es.udc.pashop.backend.model.services.CatalogService;
 @Transactional
 public class CatalogServiceTest {
 	
-	private final Long NON_EXISTENT_ID = new Long(-1);
+	private final Long NON_EXISTENT_ID = Long.valueOf(-1);
 	
 	@Autowired
 	private CategoryDao categoryDao;
